fix(app): clarified this is not itself a game but a way to add an imposter to any game.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imposter",
   "version": "1.0.0",
-  "description": "A retro-style imposter game",
+  "description": "A retro-style imposter picker",
   "main": "server/index.js",
   "scripts": {
     "dev": "vite",
