--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "commonjs",
   "dependencies": {
     "@preact/signals": "^2.3.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "preact": "^10.27.2",
     "socket.io": "^4.8.1",
