--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "server": "node server/index.js",
     "server:prod": "NODE_ENV=production node server/index.js",
-    "start": "npm run server & npm run dev"
+    "start": "npm run server & npm run dev",
+    "deploy": "ssh -t Stapps 'source ~/.nvm/nvm.sh && cd /srv/imposter && git pull && nvm use 20 && npm run build && sudo systemctl restart imposter'"
   },
   "keywords": [],
   "author": "",
